[gd_scene load_steps=4 format=3 uid="uid://csfdhp7ejy7r"]

[ext_resource type="Script" uid="uid://d21q2dqmy5njf" path="res://src/scripts/pressure_plate.gd" id="1_1jdah"]
[ext_resource type="Texture2D" uid="uid://dmx4rrg83ee5q" path="res://assets/sprites/pressure_plate.png" id="2_uqmfw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aosri"]
size = Vector2(24, 6)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1jdah")

[node name="PressurePlateArea" type="Area2D" parent="."]

[node name="ActivateCollision" type="CollisionShape2D" parent="PressurePlateArea"]
unique_name_in_owner = true
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_aosri")

[node name="ActivateSprite" type="Sprite2D" parent="PressurePlateArea"]
unique_name_in_owner = true
texture = ExtResource("2_uqmfw")
region_enabled = true
region_rect = Rect2(0, 0, 32, 16)

[node name="PlateBaseSprite" type="Sprite2D" parent="PressurePlateArea"]
unique_name_in_owner = true
visible = false
texture = ExtResource("2_uqmfw")
region_enabled = true
region_rect = Rect2(0, 16, 32, 16)

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]

[node name="PlateBaseCollision" type="CollisionPolygon2D" parent="AnimatableBody2D"]
unique_name_in_owner = true
position = Vector2(0, 7)
polygon = PackedVector2Array(-12, 1, 0, -1, 12, 1)

[connection signal="body_entered" from="PressurePlateArea" to="." method="_on_pressure_plate_area_body_entered"]
[connection signal="body_exited" from="PressurePlateArea" to="." method="_on_pressure_plate_area_body_exited"]
